# libcurvecpr

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile.am  README.md  autogen.sh  configure.ac  libcurvecpr.pc.in
include/: Makefile.am  block.h  bytes.h  messager.h  server.h  session.h  util.h
lib/: Makefile.am  bytes.c  client.c  client_recv.c  client_send.c  messager.c  server.c  server_recv.c  server_send.c  session.c
libcurvecpr/: CMakeLists.txt  Makefile.am  libcurvecpr.pc.in
libcurvecpr-glib/: Makefile.am  libcurvecpr-glib.pc.in
libcurvecpr-glib/include/: Makefile.am  client_messager_glib.h  curvecpr_glib.h  messager_glib.h
libcurvecpr-glib/include/curvecpr_glib/: client_messager_glib.h  messager_glib.h
libcurvecpr-glib/lib/: Makefile.am  client_messager_glib.c  messager_glib.c
libcurvecpr-glib/test/: Makefile.am
libcurvecpr/cmake/: FindCheck.cmake  FindSodium.cmake
libcurvecpr/include/: Makefile.am  block.h  chicago.h  client.h  curvecpr.h  packet.h  server.h
libcurvecpr/include/curvecpr/: block.h  bytes.h  chicago.h  client.h  messager.h  packet.h  server.h  session.h  trace.h  util.h
libcurvecpr/lib/: Makefile.am  bytes.c  chicago.c  client.c  client_recv.c  client_send.c  messager.c  server.c  server_recv.c  server_send.c  session.c  trace.c  util.c
libcurvecpr/test/: Makefile.am  check_extras.h
libcurvecpr/test/messager/: .gitignore  test_delivery.c  test_new_configures_object.c  test_recv_requests_removal_from_sendmarkq.c  test_send_with_1_failure_moves_message_from_sendq.c  test_timeout_callback_fires.c
libcurvecpr/test/packet_delivery/: .gitignore  packet_delivery.c
libcurvecpr/test/util/: .gitignore  test_nanoseconds.c
t/: Makefile.am  test_messager.c
t/messager/: .gitignore  test_recv_requests_removal_from_sendmarkq.c  test_send_with_1_failure_moves_message_from_sendq.c
